# CLAI

./: main.py  pyproject.toml  requirements.txt  structure.json
cli/: doc.py  monitor.py  summarize.py  visualize.py
core/: llm.py  update_monitor.py  visualizer.py
src/clai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/cli/: doc.py  main.py  monitor.py  summarize.py  visualize.py
src/core/: json.py  llm.py  markdown.py  update_monitor.py  visualizer.py
